Reapply "Merge branch 'main' into configurable_external_search_features"
This reverts commit 519a25306407c94c6b58f9a3d4461257fcca2be6.