@@ -4,14 +4,13 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.jabref.logic.FilePreferences;
 import org.jabref.logic.importer.util.FileFieldParser;
 import org.jabref.logic.l10n.Localization;
+import org.jabref.logic.util.strings.StringUtil;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.LinkedFile;
-import org.jabref.model.strings.StringUtil;
 
 public class FileChecker implements ValueChecker {
 
@@ -32,7 +31,7 @@ public class FileChecker implements ValueChecker {
         List<LinkedFile> linkedFiles = FileFieldParser
                 .parse(value).stream()
                 .filter(file -> !file.isOnlineLink())
-                .collect(Collectors.toList());
+                .toList();
 
         for (LinkedFile file : linkedFiles) {
             Optional<Path> linkedFile = file.findIn(context, filePreferences);
